Review comment